--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -505,7 +505,10 @@ section {
 	font-weight: 600;
 	font-size: 26px;
 }
-
+.about-title {
+	border-bottom: 1px solid #6ee682;
+	border-radius: 40px;
+}
 .about .content ul {
 	list-style: none;
 	padding: 0;
