--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -677,6 +677,10 @@ section {
 	background: #fff;
 }
 
+.contact-margin {
+	margin-left: 10px;
+}
+
 .contact .info i {
 	font-size: 20px;
 	color: #3b8641;
@@ -1053,4 +1057,7 @@ section {
 		position: absolute;
 		top: 80px;
 	}
+}
+
+@media screen and (max-width: 320px) {
 }
